fix: alguns erros gerados pelo merge